dawarich/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dawarich-service
  name: dawarich-service
  namespace: dawarich
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: http
    name: web
  selector:
    app: dawarich
