dawarich/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dawarich
  namespace: dawarich
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "dawarich.ucdialplans.com"
  rules:
  - backendRefs:
    - name: dawarich-service
      namespace: dawarich
      kind: Service
      port: 3000
